--- a/GWAS.Rmd
+++ b/GWAS.Rmd
@@ -90,13 +90,14 @@ control <- control.58c %>% bind_cols(control.nbs[,5:ncol(control.nbs)])
 
 Sample with 1 SNP
 ```{r eval=F}
-GWA <- function(i) {
+GWA <- function(csnp, dsnp) {
   
-  csnp <- control[i,]
-  dsnp <- disease[i,]
+  if (csnp[[1]] != chrom || dsnp[[1]] != chrom){
+    return(NA)
+  }
   
   # build contingency table
-  snpTable <- table(t(csnp[1,5:ncol(csnp)]), useNA="no") %>% bind_rows(table(t(dsnp[1,5:ncol(dsnp)]), useNA="no"))
+  snpTable <- table(t(csnp[5:ncol(csnp)]), useNA="no") %>% bind_rows(table(t(dsnp[5:ncol(dsnp)]), useNA="no"))
   snpTable[is.na(snpTable)] <- 0
   
   # check for edge cases with alleles
@@ -117,27 +118,26 @@ GWA <- function(i) {
   minorAllele <- colnames(snpTable.additive[1,-majorAllele])
   majorAllele <- colnames(snpTable.additive[1,majorAllele])
   
-  return(c(`WTCCC`=as.character(csnp[1,2]), 
-                    `MinorAllele`=minorAllele,  
-                    `MajorAllele`=majorAllele,
-                    `ControlMajorAlleleCount`=snpTable.additive[[1,majorAllele]],
-                    `ControlMinorAlleleCount`=snpTable.additive[[1,minorAllele]],
-                    `DiseaseMajorAlleleCount`=snpTable.additive[[2,majorAllele]],
-                    `DiseaseMinorAlleleCount`=snpTable.additive[[2,minorAllele]],
-                    `AACount`=snpTable[[1,1]],
-                    `ABCount`=snpTable[[1,2]],
-                    `BBCount`=snpTable[[1,3]]))
+  return(c (`Chrom`=as.numeric(csnp[1]),
+            `WTCCC`=as.character(csnp[[2]]), 
+            `MinorAllele`=minorAllele,  
+            `MajorAllele`=majorAllele,
+            `ControlMajorAlleleCount`=snpTable.additive[[1,majorAllele]],
+            `ControlMinorAlleleCount`=snpTable.additive[[1,minorAllele]],
+            `DiseaseMajorAlleleCount`=snpTable.additive[[2,majorAllele]],
+            `DiseaseMinorAlleleCount`=snpTable.additive[[2,minorAllele]],
+            `AACount`=snpTable[[1,1]],
+            `ABCount`=snpTable[[1,2]],
+            `BBCount`=snpTable[[1,3]]) )
   
 }
 
 print(paste("Performing GWA for chromosome", chrom))
-# gwaResult <- data.frame(apply(seq_along(1:5), 1, GWA), stringsAsFactors = F)
-
-gwaResult <- do.call(rbind, lapply(seq_along(1:250), GWA))
+gwaResult <- do.call(rbind, lapply(seq_along(1:10), function(i){GWA(control[i,], disease[i,])}))
 gwaResult <- data.frame(gwaResult, stringsAsFactors = F)
 
 print("Finished GWAS, writing out intermediate data")
-write.table(gwaResult, file=paste0("./imm/gwa", chrom, ".csv"), sep="\t")
+# write.table(gwaResult, file=paste0("./imm/gwa", chrom, ".csv"), sep="\t")
 
 # Remove any rows with NA values
 print("Remove rows with NA")
@@ -145,7 +145,8 @@ gwaResult <- gwaResult[complete.cases(gwaResult),]
 
 # Class conversions
 print("Class conversion")
-gwaResult <- gwaResult %>% mutate(ControlMajorAlleleCount=as.numeric(ControlMajorAlleleCount),
+gwaResult <- gwaResult %>% mutate(Chrom=as.numeric(Chrom),
+                                  ControlMajorAlleleCount=as.numeric(ControlMajorAlleleCount),
                                   ControlMinorAlleleCount=as.numeric(ControlMinorAlleleCount),
                                   DiseaseMajorAlleleCount=as.numeric(DiseaseMajorAlleleCount),
                                   DiseaseMinorAlleleCount=as.numeric(DiseaseMinorAlleleCount),
@@ -155,7 +156,7 @@ gwaResult <- gwaResult %>% mutate(ControlMajorAlleleCount=as.numeric(ControlMajo
 
 # get RSID
 print("Get RSID")
-snps <- select(snps, V4, V5) %>% transmute(WTCCC=V4, rsid=V5)
+snps <- snps %>% select(V2, V4, V5) %>% transmute(WTCCC=V4, rsid=V5, pos=V2)
 gwaResult <- gwaResult %>% left_join(snps, by='WTCCC')
   
 print("Frequency Calculations")
@@ -164,7 +165,7 @@ gwaResult <- gwaResult %>%
   mutate(DiseaseMinAlleleFreq=DiseaseMinorAlleleCount/(DiseaseMinorAlleleCount+DiseaseMajorAlleleCount))
 
 print("Calculate OR Ratios")
-gwaResult <- gwaResult %>% mutate(OR=(DiseaseMinorAlleleCount*ControlMajorAlleleCount)/(DiseaseMajorAlleleCount*ControlMinorAlleleCount))
+gwaResult <- gwaResult %>% mutate(OR=(DiseaseMajorAlleleCount*ControlMinorAlleleCount)/(DiseaseMinorAlleleCount*ControlMajorAlleleCount))
 
 print("generate HW p and q values")
 gwaResult <- gwaResult %>% 
@@ -195,13 +196,10 @@ gwaResult$HWPValue <- apply(gwaResult, 1, function(x) {
 
 # concatenate to the results we want
 print("Select results table")
-gwaResult <- gwaResult %>% select(rsid, MinorAllele, MajorAllele, DiseaseMinAlleleFreq, ControlMinAlleleFreq, OR, PValue, HWPValue)
-
-print("Attach chromosome number")
-gwaResult$Chrom <- chrom
+gwaResult <- gwaResult %>% select(Chrom, rsid, pos, MinorAllele, MajorAllele, DiseaseMinAlleleFreq, ControlMinAlleleFreq, OR, PValue, HWPValue)
 
 print("Write out results to file")
-write.table(gwaResult, file=paste0("./results/gwa", chrom, ".csv"), sep="\t")
+# write.table(gwaResult, file=paste0("./results/gwa", chrom, ".csv"), sep="\t")
 ```
 
 Stitch Together the output files
@@ -210,19 +208,24 @@ gwaResult <- do.call(rbind, lapply(1:22, function(i) {
   read.delim(paste0("./results/gwa", i, ".csv"), sep="\t", header=T)
 }))
 
-write.table(gwaResult, file=paste0("gwa_results.csv"), sep="\t")
+write.table(gwaResult, file="gwa_results.csv", sep="\t")
 ```
 
 Import the results of GWAS
 ```{r}
 gwaResult <- read.delim('gwa_results.csv', sep="\t", header=T)
+gwaResult$OR <- 1/gwaResult$OR
+snps.all <- read.delim('snps_all', sep="\t", header=F)
+
 ```
 
-Filter out the SNPs that deviate from Hardy-Weinberg because these are most likely due to genotyping errors
+Filter out SNPs
 ```{r}
 print(paste("SNPs before filter: ", nrow(gwaResult)))
-gwaResult <- gwaResult %>% filter(HWPValue > 0.05)
-print(paste("SNPs before filter: ", nrow(gwaResult)))
+  # SNPs that deviate from Hardy-Weinberg because these are most likely due to genotyping errors
+  # and SNPs that have MAF < 0.01
+gwaResult <- gwaResult %>%  filter(HWPValue > 0.05 & ControlMinAlleleFreq > 0.01)
+print(paste("SNPs after filter: ", nrow(gwaResult)))
 ```
 
 Calculate Bonferroni Threshold
@@ -235,6 +238,21 @@ Write out the file to `T2D.csv`
 ```{r}
 write.table(gwaResult, file=paste0("T2Ds.csv"), sep="\t")
 ```
+
+Manhattan and QQPlot of PValues
+```{r}
+n <- nrow(gwaResult)
+probabilities <- (1:n)/(n+1)
+unif.quantiles <- qunif(probabilities, min = 0, 1)
+plot(sort(unif.quantiles), sort(gwaResult$PValue) , xlab = 'Theoretical Quantiles from Uniform Distribution', ylab = 'Sample Quantiles of GWAS PValues', main = 'Uniform Quantile-Quantile Plot of GWAS PValues')
+abline(0,1)
+```
+
+```{r}
+ggplot(gwaResult) + geom_qq(mapping=aes(sample=PValue), distribution = qunif)
+```
+
+
 
 
 ```{r}
